package domain.entity;

import persistence.IdentifiableEntity;
import domain.valueObjects.Location;
import domain.valueObjects.ShowRequestStatus;
import eapli.framework.domain.model.AggregateRoot;
import eapli.framework.domain.model.DomainEntityBase;
import domain.valueObjects.Description;
import jakarta.persistence.*;
import lombok.Getter;
import lombok.Setter;

import javax.xml.bind.annotation.XmlRootElement;
import java.io.Serial;
import java.io.Serializable;
import java.time.Duration;
import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;
import java.util.List;
import java.util.Objects;

/**
 * Represents a show request in the Shodrone system, capturing details like submission date, status,
 * author, costumer, figures, description, location, show date, number of drones, and duration.
 * Also tracks modification details such as author and date of the last change.
 */
@XmlRootElement
@Entity
@Table(name = "show_request")
public class ShowRequest extends DomainEntityBase<Long> implements AggregateRoot<Long>, Serializable, IdentifiableEntity<Long> {

    @Serial
    private static final long serialVersionUID = 1L;

    /** Default modification author message when no modifications have been made. */
    private static final String DEFAULT_MODIFICATION_AUTHOR = "No author have modified this Show Request yet!";

    /** Default modification date when no modifications have been made. */
    private static final LocalDateTime DEFAULT_MODIFICATION_DATE = null;

    /**
     * Unique identifier for the show request, auto-generated by the system.
     */
    @Id
    @GeneratedValue(strategy = GenerationType.AUTO)
    @Column(name = "Show_Request_ID", nullable = false, unique = true)
    private Long showRequestId;

    /**
     * Date and time when the show request was submitted (immutable after creation).
     */
    @Getter
    @Column(name = "submission_date", nullable = false, updatable = false)
    private LocalDateTime submissionDate;

    /**
     * Current status of the show request (e.g., PENDING, APPROVED).
     */
    @Setter
    @Getter
    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private ShowRequestStatus status;

    /**
     * Author who submitted the show request (immutable after creation).
     */
    @Getter
    @Column(name = "submission_author", nullable = false, updatable = false)
    private String submissionAuthor;

    /**
     * Costumer associated with the show request.
     */
    @Getter
    @ManyToOne(fetch = FetchType.LAZY, optional = false, cascade = CascadeType.MERGE)
    @JoinColumn(name = "costumer_id", nullable = false)
    private Costumer costumer;


    /**
     * List of figures selected for the show.
     */
    @Setter
    @Getter
    @OneToMany(fetch = FetchType.LAZY, cascade = CascadeType.MERGE)
    @JoinTable(
            name = "show_request_figures",
            joinColumns = @JoinColumn(name = "Show_Request_ID"),
            inverseJoinColumns = @JoinColumn(name = "figureId")
    )
    private List<Figure> figures;

    /**
     * Description of the show request.
     */
    @Setter
    @Getter
    @Embedded
    private Description description;

    /**
     * Location of the show.
     */
    @Setter
    @Getter
    @Embedded
    private Location location;

    /**
     * Scheduled date and time for the show.
     */
    @Setter
    @Getter
    @Column(name = "show_date", nullable = false)
    private LocalDateTime showDate;

    /**
     * Number of drones planned for the show.
     */
    @Setter
    @Getter
    @Column(name = "number_of_drones", nullable = false)
    private int numberOfDrones;

    /**
     * Planned duration of the show.
     */
    @Setter
    @Getter
    @Column(name = "show_duration", nullable = false)
    private Duration showDuration;

    /**
     * Author of the last modification.
     */
    @Setter
    @Getter
    @Column(name = "modification_author")
    private String modificationAuthor;

    /**
     * Date of the last modification.
     */
    @Setter
    @Getter
    @Column(name = "last_modification_date")
    private LocalDateTime modificationDate;

    /**
     * Protected constructor required for JPA. Do not use directly.
     */
    protected ShowRequest() {}

    /**
     * Creates a new show request with the provided details.
     *
     * @param submissionDate   Date and time of submission.
     * @param status           Initial status of the request.
     * @param submissionAuthor Author who submitted the request.
     * @param costumer         Costumer associated with the request.
     * @param figures          List of figures selected for the show.
     * @param description      Description of the request.
     * @param location         Location of the show.
     * @param showDate         Scheduled date and time for the show.
     * @param numberOfDrones   Number of drones planned.
     * @param showDuration     Planned duration of the show.
     */
    public ShowRequest(LocalDateTime submissionDate, ShowRequestStatus status, String submissionAuthor, Costumer costumer, List<Figure> figures, Description description, Location location, LocalDateTime showDate, int numberOfDrones, Duration showDuration) {
        this.submissionDate = submissionDate;
        this.status = status;
        this.submissionAuthor = submissionAuthor;
        this.costumer = costumer;
        this.figures = figures;
        this.description = description;
        this.location = location;
        this.showDate = showDate;
        this.numberOfDrones = numberOfDrones;
        this.showDuration = showDuration;
        this.modificationAuthor = DEFAULT_MODIFICATION_AUTHOR;
        this.modificationDate = DEFAULT_MODIFICATION_DATE;
    }

    /**
     * Creates a new show request with a specific ID (for testing purposes only).
     *
     * @param showRequestId    Manually set ID for testing.
     * @param submissionDate   Date and time of submission.
     * @param status           Initial status of the request.
     * @param submissionAuthor Author who submitted the request.
     * @param costumer         Costumer associated with the request.
     * @param figures          List of figures selected for the show.
     * @param description      Description of the request.
     * @param location         Location of the show.
     * @param showDate         Scheduled date and time for the show.
     * @param numberOfDrones   Number of drones planned.
     * @param showDuration     Planned duration of the show.
     */
    public ShowRequest(long showRequestId, LocalDateTime submissionDate, ShowRequestStatus status, String submissionAuthor, Costumer costumer, List<Figure> figures, Description description, Location location, LocalDateTime showDate, int numberOfDrones, Duration showDuration) {
        this.showRequestId = showRequestId;
        this.submissionDate = submissionDate;
        this.status = status;
        this.submissionAuthor = submissionAuthor;
        this.costumer = costumer;
        this.figures = figures;
        this.description = description;
        this.location = location;
        this.showDate = showDate;
        this.numberOfDrones = numberOfDrones;
        this.showDuration = showDuration;
        this.modificationAuthor = DEFAULT_MODIFICATION_AUTHOR;
        this.modificationDate = DEFAULT_MODIFICATION_DATE;
    }

    /**
     * Sets the show request ID (used internally or for testing).
     *
     * @param l The ID to set.
     */
    public void setId(long l) {
        this.showRequestId = l;
    }

    /**
     * Returns the unique identifier of the show request.
     *
     * @return The show request ID.
     */
    @Override
    public Long identity() {
        return showRequestId;
    }

    /**
     * Checks if this show request is the same as another object based on ID.
     *
     * @param other The object to compare.
     * @return True if the same, false otherwise.
     */
    @Override
    public boolean sameAs(Object other) {
        if (!(other instanceof ShowRequest)) return false;
        ShowRequest that = (ShowRequest) other;
        return Objects.equals(showRequestId, that.showRequestId);
    }

    /**
     * Checks if this show request is equal to another object based on ID.
     *
     * @param o The object to compare.
     * @return True if equal, false otherwise.
     */
    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (!(o instanceof ShowRequest)) return false;
        ShowRequest that = (ShowRequest) o;
        return Objects.equals(showRequestId, that.showRequestId);
    }

    /**
     * Generates a hash code based on the show request ID.
     *
     * @return The hash code.
     */
    @Override
    public int hashCode() {
        return Objects.hash(showRequestId);
    }

    /**
     * Creates a clone of this show request.
     *
     * @return A new ShowRequest instance with the same attributes.
     */
    @Override
    public ShowRequest clone() {
        return new ShowRequest(
                this.showRequestId,
                this.submissionDate,
                this.status,
                this.submissionAuthor,
                this.costumer,
                this.figures,
                this.description,
                this.location,
                this.showDate,
                this.numberOfDrones,
                this.showDuration
        );
    }

    /**
     * Returns a string representation of the show request for display or debugging.
     *
     * @return Formatted string with key details.
     */
    @Override
    public String toString() {
        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
        return String.format(
                "ShowRequest [ID=%d, Date=%s, Author=%s, Status=%s, Drones=%d, Duration=%s]",
                showRequestId,
                showDate.format(formatter),
                submissionAuthor,
                status,
                numberOfDrones,
                showDuration.toMinutes() + " min"
        );
    }
}